--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= titulo %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= titulo %></h1>
-    <p>Autor: <%= autor %></p>
-  </body>
-</html>
+  <% include ./templates/header %>
+
+    <% for(var i=0;i<info.length;i++){%>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="http://placeimg.com/120/68/any" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= info[i].nombreSemillero %></h5>
+          <p class="card-title"><%= info[i].descripcionSemillero %></p>
+          <p class="card-title"><%= info[i].liderSemillero %></p>
+          </div>
+      </div>
+  <%}%>
