--- a/views/crearSemillero.ejs
+++ b/views/crearSemillero.ejs
@@ -1,19 +1,37 @@
 <% include ./templates/header %>
-<form>
-  <div class="form-group">
-    <label for="nombreSemillero">Nombre Semillero</label>
-    <input type="text" class="form-control" name="nombreSemillero" id="nombreSemillero" aria-describedby="Nombre semillero" placeholder="nombre semillero">
+<% include ./templates/menu%>
+<div class="container">
+  <div class="row">
+      <div class="col-md-12">
+          <h4 class="page-head-line">Crear semillero</h4>
+      </div>
   </div>
-  <div class="form-group">
-    <label for="descripcionSemillero">descripcion semillero</label>
-    <input type="text" class="form-control" name="descripcionSemillero" id="descripcionSemillero" placeholder="Descripcion">
+
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel panel-heading">
+       <h4>parametros para crear semillero</h4>
+      </div>
+      <div class="panel panel-body">
+        <form>
+          <div class="form-group">
+            <label for="nombreSemillero">Nombre Semillero</label>
+            <input type="text" class="form-control" name="nombreSemillero" id="nombreSemillero" aria-describedby="Nombre semillero" placeholder="nombre semillero">
+          </div>
+          <div class="form-group">
+            <label for="descripcionSemillero">descripcion semillero</label>
+            <input type="text" class="form-control" name="descripcionSemillero" id="descripcionSemillero" placeholder="Descripcion">
+          </div>
+          <div class="form-group">
+            <label for="liderSemillero">Nombre Semillero</label>
+            <input type="text" class="form-control" name="liderSemillero"id="liderSemillero" aria-describedby="Nombre del lider del semillero" placeholder="lider del semillero">
+          </div>
+          <button id="crearSemillero"type="button" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="liderSemillero">Nombre Semillero</label>
-    <input type="text" class="form-control" name="liderSemillero"id="liderSemillero" aria-describedby="Nombre del lider del semillero" placeholder="lider del semillero">
-  </div>
-  <button id="crearSemillero"type="button" class="btn btn-primary">Submit</button>
-</form>
+</div>
 <%include ./templates/scripts %>
 <script>
     $(document).ready(function(){
