--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,2 +1,13 @@
+<!-- CONTENT-WRAPPER SECTION END-->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                &copy; PERSPICAPPS</a>
+            </div>
+
+        </div>
+    </div>
+</footer>
 </body>
 </html>
