--- a/views/crearSemillero.ejs
+++ b/views/crearSemillero.ejs
@@ -40,6 +40,7 @@
           type:"POST",
           data:$('form').serialize(),
           success: function(response){
+            swal("Buen trabajo!", "Se a hagregado con exito la públicación!", "success");
             console.log(response);
           }
         });
